# aco-sync-nas-dirs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
